--- a/MigratorAzureDevops.csproj
+++ b/MigratorAzureDevops.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Class\ApiRequest.cs" />
     <Compile Include="Class\Operations.cs" />
     <Compile Include="Controllers\OpenExcelController.cs" />
+    <Compile Include="Controllers\WelcomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -228,7 +229,10 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\font-awesome.css" />
+    <Content Include="Content\font-awesome.min.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -290,6 +294,11 @@
     <Content Include="packages\EPPlus.5.0.4\.signature.p7s" />
     <Content Include="packages\EPPlus.5.0.4\EPPlus.5.0.4.nupkg" />
     <Content Include="packages\EPPlus.5.0.4\license.md" />
+    <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\fontawesome-webfont.woff2" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
     <None Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1-vsdoc.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.min.js" />
@@ -588,11 +597,12 @@
     <Content Include="Views\OpenExcel\Import.cshtml" />
     <Content Include="Views\ExcelReader\ReadExcelFile.cshtml" />
     <Content Include="Views\ExcelReader\SheetsDrop.cshtml" />
+    <Content Include="Views\Welcome\Welcomepage.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="ExcelFile\" />
-    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
