--- a/MigratorAzureDevops.csproj
+++ b/MigratorAzureDevops.csproj
@@ -303,6 +303,8 @@
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\Images\LoadingBalls.gif" />
+    <Content Include="Content\MigratorCSS\Layout.css" />
+    <Content Include="Content\MigratorCSS\SheetsDrop.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="Global.asax" />
@@ -772,6 +774,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\ExcelReader\Sheets.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
