--- a/MigratorAzureDevops.csproj
+++ b/MigratorAzureDevops.csproj
@@ -811,7 +811,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>62530</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44309/</IISUrl>
+          <IISUrl>http://localhost:62530/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
