--- a/packages.config
+++ b/packages.config
@@ -10,23 +10,28 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
-  <package id="Microsoft.TeamFoundation.DistributedTask.Common.Contracts" version="16.153.0" targetFramework="net472" />
-  <package id="Microsoft.TeamFoundationServer.Client" version="16.153.0" targetFramework="net472" />
-  <package id="Microsoft.VisualStudio.Services.Client" version="16.153.0" targetFramework="net472" />
+  <package id="Microsoft.TeamFoundation.DistributedTask.Common" version="15.112.1" targetFramework="net461" />
+  <package id="Microsoft.TeamFoundationServer.Client" version="15.112.1" targetFramework="net461" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.9.10" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Services.Client" version="15.112.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net472" />
   <package id="popper.js" version="1.16.0" targetFramework="net472" />
   <package id="SharpCompress" version="0.24.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
