--- a/Web.config
+++ b/Web.config
@@ -21,6 +21,28 @@
     <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
     
     
+  <!---->
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="AuthType" value="bearer" />
+    <!--<add key="Environment" value="development"/>-->
+    <!--column Name followed by column number foloowed by role name-->
+    <add key="UserRoles" value="Role1:5:Dev Lead,Role2:6:Tech Lead,Role3:7:Manager,Role4:8:Dev,Role5:9:QA" />
+    <add key="AreaHeaders" value="Areas:1:Area,Sub Areas:2:SubArea,User Names:3:UserName,Email Ids:4:EmailId" />
+    <!--<add key="environment" value="staging"/>-->
+
+
+    <add key="SCM_COMMAND_IDLE_TIMEOUT" value="100000" />
+    <add key="WEBJOBS_IDLE_TIMEOUT" value="100000" />
+
+      <!--The license context used-->
+      <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
+
+    
+    <add key="ApiVersion" value="5.0" />
+    <!---->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -68,4 +90,17 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+<system.webServer>
+  <security>
+    <requestFiltering>
+      <requestLimits maxAllowedContentLength="3000000000" />
+    </requestFiltering>
+  </security>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
 </configuration>
