--- a/Web.config
+++ b/Web.config
@@ -4,7 +4,31 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+  </configSections>
+  <log4net>
+    <appender name="ErrorLog" type="log4net.Appender.RollingFileAppender">
+      <file value="D:\All My Applications\MigratorAzureDevops\Logs\" />
+      <staticLogFileName value="false" />
+      <appendToFile value="false" />
+      <rollingStyle value="Size" />
+      <datePattern value="yyyy-MM-dd.'txt'" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversationPattern value="%d{DATE} [%t] %-5 %c - %m%n" />
+      </layout>
+    </appender>
+    <logger name="ErrorLog">
+      <maximunFileSize value="15MB" />
+      <appender-ref ref="ErrorLog" />
+      <maxsizerollbackups value="7" />
+    </logger>
+  </log4net>
   <appSettings>
+    <add key="log4net.Internal.Debug" value="true"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
