--- a/MigratorAzureDevops.csproj
+++ b/MigratorAzureDevops.csproj
@@ -17,7 +17,7 @@
     <AssemblyName>MigratorAzureDevops</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort>44309</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
@@ -702,6 +702,9 @@
     <Content Include="Scripts\bootstrap.js.map" />
     <Content Include="Scripts\bootstrap.bundle.min.js.map" />
     <Content Include="Scripts\bootstrap.bundle.js.map" />
+    <None Include="Properties\PublishProfiles\WorkItemMigrator - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\WorkItemMigrator - ReadOnly - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\WorkItemMigrator - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -850,7 +853,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51936</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://wim.com/</IISUrl>
+          <IISUrl>http://localhost:51936/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
