--- a/MigratorAzureDevops.csproj
+++ b/MigratorAzureDevops.csproj
@@ -17,7 +17,7 @@
     <AssemblyName>MigratorAzureDevops</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort>44309</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
@@ -853,7 +853,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51936</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:51936/</IISUrl>
+          <IISUrl>https://WIM.com</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
