--- a/Web.config
+++ b/Web.config
@@ -11,10 +11,10 @@
   </configSections>
   <log4net>
     <appender name="ErrorLog" type="log4net.Appender.RollingFileAppender">
-      <file value="D:\All My Applications\MigratorAzureDevops\Logs\" />
+      <file value="Logs\log" />
       <staticLogFileName value="false" />
       <appendToFile value="false" />
-      <rollingStyle value="Size" />
+      <rollingStyle value="Date" />
       <datePattern value="yyyy-MM-dd.'txt'" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
