--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
+  <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net472" />
   <package id="bootstrap" version="4.4.1" targetFramework="net472" />
   <package id="EPPlus" version="5.0.4" targetFramework="net472" />
-  <package id="ExcelToClasses" version="1.1.3" targetFramework="net472" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
@@ -12,27 +12,54 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.5" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="Microsoft.TeamFoundation.DistributedTask.Common" version="15.112.1" targetFramework="net461" />
   <package id="Microsoft.TeamFoundationServer.Client" version="15.112.1" targetFramework="net461" />
+  <package id="Microsoft.TeamFoundationServer.ExtendedClient" version="15.112.1" targetFramework="net472" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.9.10" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Services.Client" version="15.112.1" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Services.InteractiveClient" version="15.112.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net472" />
   <package id="popper.js" version="1.16.0" targetFramework="net472" />
   <package id="SharpCompress" version="0.24.0" targetFramework="net472" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net472" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net472" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net472" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Net.Primitives" version="4.0.11" targetFramework="net472" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net472" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net472" />
+  <package id="System.Runtime.Serialization.Json" version="4.0.2" targetFramework="net472" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net472" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net472" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net472" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net472" />
+  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net472" />
+  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="WindowsAzure.ServiceBus" version="3.3.2" targetFramework="net472" />
 </packages>
